Tue Oct 24 23:58:35 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (do_exit): Remove debugging statement.

Tue Oct 24 23:45:09 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (do_exit): Don't bother looking for pgrp children to send
	SIGHUP if process has never created any children.
	* fork.cc (fork): Set flag indicating that there is another process
	with our process group.
	* spawn.cc (spawn_guts): Ditto.
	* pinfo.h (set_has_pgid_children): New methods for setting when process
	has children in its process group.
	* syscalls.cc (setpgid): Clear has_gid_children if pgid changes.

Tue Oct 24 20:38:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* ntdll.h: New file.
	* fhandler_mem.cc: Move ntdll.dll specific definitions and
	declarations to ntdll.h.
	* sysconf.cc (sysconf): Add support for _SC_NPROCESSORS_CONF,
	_SC_NPROCESSORS_ONLN, _SC_PHYS_PAGES and _SC_AVPHYS_PAGES.

Tue Oct 24 20:00:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::fcntl): Behave properly when passed
	previous version of O_NDELAY.
	* syscalls.cc: Move OLD_O_NDELAY to winsup.h.
	* winsup.h: Define OLD_O_NDELAY now.

Mon Oct 23 21:47:55 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (signal_exit): Kill any executing child process if
	we're dying.
	* path.h: Remove unneeded extern.
	* spawn.cc (std_suffixes): Make static.  Don't set dwProcessId here
	since it makes the process unsignalable.  Set strace flag that this is
	an execed process stub.
	* strace.cc (strace::vsprntf): Use strace flag to indicate when to
	visually flag that this is an exec stub.
	* include/sys/strace.h (strace): Add 'execing' flag.

Mon Oct 23 16:43:33 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.cc (proc_subproc): Don't send a false positive if WNOHANG and
	no processes are available for waiting.

Mon Oct 23 22:27:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::fcntl): Setting flags in F_SETFL